[gd_scene load_steps=3 format=3 uid="uid://c46fg85vrnxp8"]

[ext_resource type="Script" path="res://scenes/UI/audio_settings.gd" id="1_r053o"]

[sub_resource type="LabelSettings" id="LabelSettings_7u621"]
font_size = 35

[node name="audio_settings" type="Control" node_paths=PackedStringArray("MasterVolumeSlider", "LazerGunVolumeSlider")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r053o")
MasterVolumeSlider = NodePath("VBoxContainer/HBoxContainer/MasterVolumeSlider")
LazerGunVolumeSlider = NodePath("VBoxContainer/HBoxContainer2/LazerGunVolumeSlider")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_7u621")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0%"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "100%"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lazergun Volume"
label_settings = SubResource("LabelSettings_7u621")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "0%"

[node name="LazerGunVolumeSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "100%"

[connection signal="drag_ended" from="VBoxContainer/HBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer2/LazerGunVolumeSlider" to="." method="_on_lazer_gun_volume_slider_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/LazerGunVolumeSlider" to="." method="_on_lazer_gun_volume_slider_value_changed"]
